redux-toolkit 기본세팅 및 예제 적용

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "paths": {
       "@/*": ["src/*"],
       "@pages/*": ["src/pages/*"],
+      "@store/*": ["src/store/*"],
     },
 
     /* Linting */
