--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.3.11",
     "styled-reset": "^4.4.7"
   },
