메뉴바 기본 틀 제작

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
       "@/*": ["src/*"],
       "@pages/*": ["src/pages/*"],
       "@store/*": ["src/store/*"],
+      "@components/*": ["src/components/*"],
     },
 
     /* Linting */
